--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.0",
     "express-validator": "^4.2.1",
     "node-php": "0.0.1",
+    "nodemailer": "^4.1.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7"
   }
